# swarmkeeper

./: .gitignore  README.md  main.py  pyproject.toml
docs/: tmux_test_commands.md  todo.md
docs/initial_v/: design.md  project_kickstart.md
prompts/: swarmkeeper_check.md
swarmkeeper/: __init__.py  __main__.py
swarmkeeper/cli/: __init__.py  commands.py
swarmkeeper/config/: __init__.py  manager.py
swarmkeeper/manager/: __init__.py  loop.py  observer.py  schemas.py
swarmkeeper/notifications/: __init__.py  core.py  dispatcher.py  handlers.py
swarmkeeper/pattern/: __init__.py  loop.py  observer.py
swarmkeeper/session/: __init__.py  manager.py  naming.py
swarmkeeper/tmux/: __init__.py  wrapper.py
tests/: test_integration.py  test_manager_loop.py  test_notifications.py
